<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Story App</string>
    <string name="title_login_page">Login Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_signup_page">Register Page</string>
    <string name="name">Name</string>
    <string name="signup">Register</string>
    <string name="none">-</string>
    <string name="deskripsi">: Lörem ipsum ugen dest aledes. Eun tetraskade portad ölupöngen dirar. Neren vining intrasm abel den det spende. Nir hypovis krosade pisk tipisa. Mobil-tv nelig fastän ågt.</string>
    <string name="date">: 19/03/2022</string>
    <string name="id">: story-FvU4u0Vp2S3PMsFg</string>
    <string name="idTable">ID</string>
    <string name="dateTable">Date Uploaded</string>
    <string name="descTable">Description</string>
    <string name="fab_content_desc">add</string>
    <string name="camera_x">Take Photo</string>
    <string name="gallery">Choose from Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="photo_preview">Preview Image</string>
    <string name="passwordkurang">Password must be 8 characters or more</string>
    <string name="emailtidakvalid">Your email is invalid</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register_here">Register Here</string>
    <string name="login_here">Login Here</string>
    <string name="alredy_have_account">Alredy have account?</string>
    <string name="welcome_to">Welcome to</string>
    <string name="wel_desc">Story App is an application for stories</string>
    <string name="email_empty">Email must not be empty</string>
    <string name="pass_empty">Password must not be empty</string>
    <string name="cek_location">Story Location</string>
    <string name="stories">Story  </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="insert_photo">Please insert your photo first.</string>
    <string name="enable_location">Enable share your location</string>
    <string name="location_notfond">Location is not found. Try Again</string>
    <string name="try_again">Try Again</string>
    <string name="timeout">TIMEOUT</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="user_name">USERNAME</string>
    <string name="permission_reject">Didn\'t get permissions.</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="failed_picture">Failed to take photo</string>
    <string name="failed_camera_append">Failed to display the camera.</string>
    <string name="style_maps_fail">Style parsing failed.</string>
    <string name="eror_style">"Can't find style. Error: "</string>
    <string name="name_notempty">Name must not be empty</string>
    <string name="email_notempty">Email must not be empty</string>
    <string name="pass__notempty">Password must not be empty</string>
    <string name="detail_desc">": %s"</string>
    <string name="change_language">Change language</string>
    <string name="logout">Logout</string>
</resources>